Separated BrowserStack and local run using separate TestNG files